# graduate_work

./: README.md  auth.yml  mypy.ini  profiles-tests.yml  profiles.yml  pyproject.toml  setup.cfg
auth_app/: README.md  gunicorn.conf.py
auth_app/requirements/: dev.txt  tests.txt
auth_app/src/: exceptions.py  hawk.py  main.py  middleware.py  tasks.py  tracing.py
auth_app/src/alembic/: env.py
auth_app/src/core/: auth_config.py  config.py  logger.py  oauth_config.py  smtp_config.py
auth_app/src/db/: postgres.py  redis.py  sessions.py
auth_app/src/models/: choices.py
auth_app/src/schemas/: entity.py  oauth_entity.py
auth_app/src/scripts/: create_superuser.py
auth_app/src/services/: access_service.py  api_client.py  auth_service.py  cache_service.py  my_backoff.py  (+8 more)
profiles_admin/: README.md  gunicorn.conf.py  setup.cfg
profiles_admin/favorites/: admin.py  apps.py  forms.py  models.py
profiles_admin/profiles/: admin.py  apps.py  forms.py  models.py  services.py  utils.py
profiles_admin/requirements/: base.txt  prod.txt
profiles_admin/reviews/: admin.py  apps.py  forms.py  models.py
profiles_admin/src/: routers.py  settings.py  urls.py
profiles_admin/src/components/: database.py  env_variables.py
profiles_admin/users/: authentications.py  managers.py  models.py
profiles_admin/users/migrations/: 0001_initial.py
profiles_app/: README.md  gunicorn.conf.py
profiles_app/requirements/: dev.txt
profiles_app/src/: exceptions.py  hawk.py  main.py  middleware.py
tests/functional/: conftest.py  db_plugin.py  mocks.py  requirements.txt  settings.py
(+83 files in other folders)
